# lab08

./: CMakeLists.txt  Dockerfile
.github/workflows/: main.yml
Hello_world/: CMakeLists.txt  Hello_world.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
logs/: log.txt
